--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
            list-style-type: none;
            margin-top: 25px;
         }
+	#news 
+	{
+            width: 1000px;
+            min-height: 400px;
+            margin: 0 auto;		
+	}
     </style>
 </head>
 <body>
@@ -31,6 +37,11 @@
        <ul>
           <li><a href="index.php">Главная</a></li>
        </ul>
+   </div>
+   <div id="news">
+       <a href="https://tproger.ru/news/data-transfer-project-companies/"><h2>Google, Microsoft, Twitter и Facebook запустили проект по передаче данных между сервисами</h2></a></br>
+	
+	<a href="https://tproger.ru/news/intellij-idea-groovy-changes/"><h2>JetBrains опубликовала изменения в IntelliJ IDEA 2018.2 для Groovy</h2></a>   
    </div>
 </body>
 </html>
