--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             min-height: 400px;
             margin: 0 auto;		
 	}
+	#news a
+	{
+		color: gray;
+	 }
     </style>
 </head>
 <body>
@@ -39,6 +43,7 @@
        </ul>
    </div>
    <div id="news">
+	   </br></br>   
        <a href="https://tproger.ru/news/data-transfer-project-companies/"><h2>Google, Microsoft, Twitter и Facebook запустили проект по передаче данных между сервисами</h2></a></br>
 	
 	<a href="https://tproger.ru/news/intellij-idea-groovy-changes/"><h2>JetBrains опубликовала изменения в IntelliJ IDEA 2018.2 для Groovy</h2></a>   
