--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
    </div>
    <div id="news">
 	   </br></br>   
-       <a href="https://tproger.ru/news/data-transfer-project-companies/"><h2>Google, Microsoft, Twitter и Facebook запустили проект по передаче данных между сервисами</h2></a></br>
+       <a href="https://tproger.ru/news/data-transfer-project-companies/"><h2>1.Google, Microsoft, Twitter и Facebook запустили проект по передаче данных между сервисами</h2></a></br>
 	
-	<a href="https://tproger.ru/news/intellij-idea-groovy-changes/"><h2>JetBrains опубликовала изменения в IntelliJ IDEA 2018.2 для Groovy</h2></a>   
+	<a href="https://tproger.ru/news/intellij-idea-groovy-changes/"><h2>2.JetBrains опубликовала изменения в IntelliJ IDEA 2018.2 для Groovy</h2></a>   
    </div>
 </body>
 </html>
