--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
    <div id="header">
        <h3>Новости it-шника</h3>
        <ul>
-          <li><a href="index.php">Главная</a></li>
+          <li><a href="https://snoocppy.github.io/itnews/">Главная</a></li>
+	  <li><a href="https://snoocppy.github.io/itnews/comments.html">Комментарии</a></li>     
        </ul>
    </div>
    <div id="news">
