--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
    </div>
    <div id="news">
 	   </br></br>   
-       <a href="https://tproger.ru/news/data-transfer-project-companies/"><h2>1.Google, Microsoft, Twitter и Facebook запустили проект по передаче данных между сервисами</h2></a></br>
+       <a href="https://tproger.ru/news/data-transfer-project-companies/"><h2 id="newsfirst">1.Google, Microsoft, Twitter и Facebook запустили проект по передаче данных между сервисами</h2></a></br>
 	
 	<a href="https://tproger.ru/news/intellij-idea-groovy-changes/"><h2>2.JetBrains опубликовала изменения в IntelliJ IDEA 2018.2 для Groovy</h2></a>   
 </br></br>
 <label>Изменить новость</label></br>
 <input name="text" type="text" id="text"></br>
-<button type="button" onclick='document.getElementById("news").innerHTML = document.getElementById("text").innerHtml'>Изменить</button>
+<button type="button" onclick='document.getElementById("newsfirst").innerHTML = document.getElementById("text").value'>Изменить</button>
     </div>
 </body>
 </html>
