--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		color: gray;
 	 }
     </style>
+  <script>
+	  document.getElementById("newsfirst").innerHTML = localStorage.getItem("text");
+   </script>
 </head>
 <body>
    <div id="header">
