--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	 }
     </style>
   <script>
+	  localStorage.setItem("text", "1.Новость об maitam.pythonanywhere.com")
 	  document.getElementById("newsfirst").innerHTML = localStorage.getItem("text");
    </script>
 </head>
