--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
    </div>
    <div id="news">
 	   </br></br>   
-       <a href="https://tproger.ru/news/data-transfer-project-companies/"><h2 id="newsfirst">1.Google, Microsoft, Twitter и Facebook запустили проект по передаче данных между сервисами</h2></a></br>
+       <a href="https://tproger.ru/news/data-transfer-project-companies/"><h2 id="newsfirst">1.Google, Microsoft, Twitter и Facebook запустили проект по передаче данных между сервисами</h2></br></a></br>
 	
 	<a href="https://tproger.ru/news/intellij-idea-groovy-changes/"><h2>2.JetBrains опубликовала изменения в IntelliJ IDEA 2018.2 для Groovy</h2></a>   
-</br></br>
+</br></br> 
+<h2 id="itnew"></br></h2></br>
 <label>Изменить новость</label></br>
 <input name="text" type="text" id="text"></br>
-<button type="button" onclick='var newstext = localStorage.getItem("text");document.getElementById("newsfirst").innerHTML += newstext;newstext.push(document.getElementById("text").value);localStorage.setItem("text", document.getElementById("text").value);'>Изменить</button>
+<button type="button" onclick='var newstext = localStorage.getItem("text");document.getElementById("itnew").innerHTML += newstext;newstext.push(document.getElementById("text").value);localStorage.setItem("text", document.getElementById("text").value);'>Изменить</button>
     </div>
 </body>
 </html>
