--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	
 	<a href="https://tproger.ru/news/intellij-idea-groovy-changes/"><h2>2.JetBrains опубликовала изменения в IntelliJ IDEA 2018.2 для Groovy</h2></a>   
 </br></br> 
-<h2 id="itnew"></br></h2></br>
+<div id="itnew"></br></div></br>
 <label>Изменить новость</label></br>
 <input name="text" type="text" id="text"></br>
 <button type="button" onclick='var newstext = localStorage.getItem("text");document.getElementById("itnew").innerHTML += newstext;newstext.push(document.getElementById("text").value);localStorage.setItem("text", document.getElementById("text").value);'>Изменить</button>
