--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Новости it, новости it-шника.Добавьте новость про it!</title>
+    <meta name="description" content="Новости it, новости it-шника.Добавьте новость про it!">	
     <style>
         *
 	{
